Editing and posting sheriff decisions on complains.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -55,6 +55,7 @@
   "change-home-password" : "Change Home Password",
   "change-password" : "Change Password",
   "change-password-ellipsis" : "Change Password...",
+  "choose-decision" : "Please, choose your decision...",
   "choose-request" : "Choose a request...",
   "clear-selection" : "Clear selection",
   "client-settings-changed-conflict" : "Client settings were changed by somebody.",
@@ -119,6 +120,7 @@
   "create-token" : "Create a Token",
   "current" : "Current",
   "current-password" : "Current password",
+  "decision" : "Decision",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
@@ -509,6 +511,7 @@
   "register-different-name" : "Register a different name",
   "registered-name-secret" : "Registered Name Secret",
   "register-new-name" : "Register a New Name",
+  "reject" : "Reject",
   "rename" : "Rename",
   "rename-token" : "Rename a Token",
   "reply" : "Reply",
