--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -55,6 +55,7 @@
   "change-home-password" : "Изменить домашний пароль",
   "change-password" : "Изменить пароль",
   "change-password-ellipsis" : "Изменить пароль...",
+  "choose-decision" : "Пожалуйста, выберите решение...",
   "choose-request" : "Выберите просьбу...",
   "clear-selection" : "Отменить выбор",
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
@@ -119,6 +120,7 @@
   "create-token" : "Создать токен",
   "current" : "Текущий",
   "current-password" : "Текущий пароль",
+  "decision" : "Решение",
   "delete" : "Удалить",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
@@ -509,6 +511,7 @@
   "register-different-name" : "Зарегистрировать другое имя",
   "registered-name-secret" : "Секрет зарегистрированного имени",
   "register-new-name" : "Регистрация нового имени",
+  "reject" : "Отклонить",
   "rename" : "Переименовать",
   "rename-token" : "Переименовать токен",
   "reply" : "Ответить",
