--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -55,6 +55,7 @@
   "change-home-password" : "Змінити домашній пароль",
   "change-password" : "Змінити пароль",
   "change-password-ellipsis" : "Змінити пароль...",
+  "choose-decision" : "Будь ласка, оберіть рішення...",
   "choose-request" : "Виберіть прохання...",
   "clear-selection" : "Відмінити вибір",
   "client-settings-changed-conflict" : "Налаштування клієнта були кимось змінені.",
@@ -119,6 +120,7 @@
   "create-token" : "Створити токен",
   "current" : "Поточний",
   "current-password" : "Поточний пароль",
+  "decision" : "Рішення",
   "delete" : "Видалити",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
@@ -509,6 +511,7 @@
   "register-different-name" : "Зареєструвати інше ім'я",
   "registered-name-secret" : "Секрет зареєстрованого імені",
   "register-new-name" : "Реєстрація нового імені",
+  "reject" : "Відхилити",
   "rename" : "Перейменувати",
   "rename-token" : "Перейменувати токен",
   "reply" : "Відповісти",
