--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -79,7 +79,7 @@
   },
   "complains" : "Жалобы",
   "complain-status" : {
-    "accepted" : "Одобрено",
+    "approved" : "Одобрено",
     "invalid-target" : "Некорректные данные",
     "not-found" : "Не найдено",
     "not-original" : "Не оригинальный пост",
