Less types of instants for sheriff marked/unmarked your content.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -291,11 +291,7 @@
       "comment-post-task-failed" : "Не удалось добавить комментарий к посту {node} {heading}",
       "comment-reaction-added" : "{reactions} ваш комментарий {heading} к {posting}",
       "comment-reaction-task-failed" : "Не удалось подписать реакцию на комментарий {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
-      "comment-sheriff-marked" : "Шериф запретил показывать ваш комментарий {heading} к {posting} на Android",
-      "comment-sheriff-unmarked" : "Шериф разрешил показывать ваш комментарий {heading} к {posting} на Android",
       "comment-update-task-failed" : "Не удалось подписать комментарий {commentHeading} к посту {node} {postingHeading}",
-      "feed-sheriff-marked" : "Шериф запретил показывать ваш блог на Android",
-      "feed-sheriff-unmarked" : "Шериф разрешил показывать ваш блог на Android",
       "friend-added" : "{node} {gender, select, female {добавила} other {добавил}} вас в группу друзей \"{group}\"",
       "friend-added-to-friends" : "{node} {gender, select, female {добавила} other {добавил}} вас к себе в друзья",
       "friend-deleted" : "{node} {gender, select, female {удалила} other {удалил}} вас из группы друзей \"{group}\"",
@@ -307,20 +303,23 @@
       "posting-media-reaction-failed" : "Не удалось подписать реакцию на картинку в посте {node} {heading}",
       "posting-post-task-failed" : "Не удалось добавить ваш пост в блог {node}",
       "posting-reaction-task-failed" : "Не удалось подписать реакцию на пост {node} {heading}",
-      "posting-sheriff-marked" : "Шериф запретил показывать ваш пост {heading} на Android",
-      "posting-sheriff-unmarked" : "Шериф разрешил показывать ваш пост {heading} на Android",
       "posting-subscribe-task-failed" : "Не удалось подписаться на комментарии к посту {node} {heading}",
       "posting-updated" : "{node} {nodeGender, select, female {обновила} other {обновил}} свой пост {heading}",
       "posting-update-task-failed" : "Не удалось подписать ваш пост {heading} в блоге {node}",
       "reaction-added" : "{reactions} ваш пост {heading}",
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {ответила} other {ответил}}} other {ответили}} на ваш комментарий {heading} к {posting}",
+      "sheriff-marked" : "Шериф запретил показывать {target} на Android",
+      "sheriff-unmarked" : "Шериф разрешил показывать {target} на Android",
       "subscriber-added" : "{node} {gender, select, female {подписалась} other {подписался}} на вашу ленту {feed}",
       "subscriber-deleted" : "{node} {gender, select, female {отписалась} other {отписался}} от вашей ленты {feed}",
       "unblocked-user" : "{node} {gender, select, female {разрешила} other {разрешил}} вам {operations} {gender, select, female {её} other {его}} посты",
       "unblocked-user-in-posting" : "{node} {gender, select, female {разрешила} other {разрешил}} вам {operations} {gender, select, female {её} other {его}} пост {heading}"
     },
     "supported" : "{count, plural, =1 {{gender, select, female {одобрила} other {одобрил}}} other {одобрили}}",
+    "target-your-blog" : "ваш блог",
+    "target-your-comment" : "ваш комментарий {heading} к {posting}",
+    "target-your-post" : "ваш пост {heading}",
     "their-post" : "свой пост",
     "your-post" : "ваш пост"
   },
