--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -291,11 +291,7 @@
       "comment-post-task-failed" : "Failed to add a comment to {node} post {heading}",
       "comment-reaction-added" : "{reactions} your comment {heading} on {posting}",
       "comment-reaction-task-failed" : "Failed to sign a reaction to {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
-      "comment-sheriff-marked" : "Sheriff has hidden your comment {heading} on {posting} on Android",
-      "comment-sheriff-unmarked" : "Sheriff has revealed your comment {heading} on {posting} on Android",
       "comment-update-task-failed" : "Failed to sign the comment {commentHeading} to {node} post {postingHeading}",
-      "feed-sheriff-marked" : "Sheriff has hidden your blog on Android",
-      "feed-sheriff-unmarked" : "Sheriff has revealed your blog on Android",
       "friend-added" : "{node} added you to the group of friends \"{group}\"",
       "friend-added-to-friends" : "{node} added you to {gender, select, female {her} other {his}} friends",
       "friend-deleted" : "{node} removed you from the group of friends \"{group}\"",
@@ -307,20 +303,23 @@
       "posting-media-reaction-failed" : "Failed to sign a reaction to a media in {node} post {heading}",
       "posting-post-task-failed" : "Failed to add your post to {node} blog",
       "posting-reaction-task-failed" : "Failed to sign a reaction to {node} post {heading}",
-      "posting-sheriff-marked" : "Sheriff has hidden your post {heading} on Android",
-      "posting-sheriff-unmarked" : "Sheriff has revealed your post {heading} on Android",
       "posting-subscribe-task-failed" : "Failed to subscribe to comments to {node} post {heading}",
       "posting-updated" : "{node} updated their post {heading}",
       "posting-update-task-failed" : "Failed to sign your post {heading} in {node} blog",
       "reaction-added" : "{reactions} your post {heading}",
       "remote-comment-added" : "{comments} commented on {posting} {heading} {reason}",
       "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
+      "sheriff-marked" : "Sheriff has hidden {target} on Android",
+      "sheriff-unmarked" : "Sheriff has revealed {target} on Android",
       "subscriber-added" : "{node} subscribed to your {feed}",
       "subscriber-deleted" : "{node} unsubscribed from your {feed}",
       "unblocked-user" : "{node} has allowed you {operations} {gender, select, male {his} female {her} other {their}} posts",
       "unblocked-user-in-posting" : "{node} has allowed you {operations} {gender, select, male {his} female {her} other {their}} post {heading}"
     },
     "supported" : "supported",
+    "target-your-blog" : "your blog",
+    "target-your-comment" : "your comment {heading} on {posting}",
+    "target-your-post" : "your post {heading}",
     "their-post" : "{gender, select, male {his} female {her} other {their}} post",
     "your-post" : "your post"
   },
