--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -291,11 +291,7 @@
       "comment-post-task-failed" : "Не вдалося додати коментар до посту {node} {heading}",
       "comment-reaction-added" : "{reactions} ваш коментар {heading} до {posting}",
       "comment-reaction-task-failed" : "Не вдалося підписати реакцію на коментар {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
-      "comment-sheriff-marked" : "Шериф заборонив показувати ваш коментар {heading} до {posting} на Android",
-      "comment-sheriff-unmarked" : "Шериф дозволив показувати ваш коментар {heading} до {posting} на Android",
       "comment-update-task-failed" : "Не вдалося підписати коментар {commentHeading} до посту {node} {postingHeading}",
-      "feed-sheriff-marked" : "Шериф заборонив показувати ваш блог на Android",
-      "feed-sheriff-unmarked" : "Шериф дозволив показувати ваш блог на Android",
       "friend-added" : "{node} {gender, select, female {додала} other {додав}} вас до групи друзів \"{group}\"",
       "friend-added-to-friends" : "{node} {gender, select, female {додала} other {додав}} вас до себе у друзі",
       "friend-deleted" : "{node} {gender, select, female {вилучила} other {вилучив}} вас з групи друзів \"{group}\"",
@@ -307,20 +303,23 @@
       "posting-media-reaction-failed" : "Не вдалося підписати реакцію на картинку у пості {node} {heading}",
       "posting-post-task-failed" : "Не вдалося додати ваш пост у блог {node}",
       "posting-reaction-task-failed" : "Не вдалося підписати реакцію на пост {node} {heading}",
-      "posting-sheriff-marked" : "Шериф заборонив показувати ваш пост {heading} на Android",
-      "posting-sheriff-unmarked" : "Шериф дозволив показувати ваш пост {heading} на Android",
       "posting-subscribe-task-failed" : "Не вдалося підписатись на коментарі до посту {node} {heading}",
       "posting-updated" : "{node} {nodeGender, select, female {оновила} other {оновив}} свій пост {heading}",
       "posting-update-task-failed" : "Не вдалося підписати ваш пост {heading} у блозі {node}",
       "reaction-added" : "{reactions} ваш пост {heading}",
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {відповіла} other {відповів}}} other {відповіли}} на ваш коментар {heading} до {posting}",
+      "sheriff-marked" : "Шериф заборонив показувати {target} на Android",
+      "sheriff-unmarked" : "Шериф дозволив показувати {target} на Android",
       "subscriber-added" : "{node} {gender, select, female {підписалась} other {підписався}} на вашу стрічку {feed}",
       "subscriber-deleted" : "{node} {gender, select, female {відписалась} other {відписався}} від вашої стрічки {feed}",
       "unblocked-user" : "{node} {gender, select, female {дозволила} other {дозволив}} вам {operations} {gender, select, female {її} other {його}} пости",
       "unblocked-user-in-posting" : "{node} {gender, select, female {дозволила} other {дозволив}} вам {operations} {gender, select, female {її} other {його}} пост {heading}"
     },
     "supported" : "{count, plural, =1 {{gender, select, female {схвалила} other {схвалив}}} other {схвалили}}",
+    "target-your-blog" : "ваш блог",
+    "target-your-comment" : "ваш коментар {heading} до {posting}",
+    "target-your-post" : "ваш пост {heading}",
     "their-post" : "свій пост",
     "your-post" : "ваш пост"
   },
