Make all complains public by default. Allow to hide complains.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -387,11 +387,14 @@
   "no-requests-available" : "No requests available.",
   "not-allowed" : "Not allowed",
   "not-connected-home" : "Not connected to home",
+  "note-complains-public" : "<b>Note:</b> All complains to the sheriff are public. You can ask not to publish your complain for some reason, but the final decision is made by the sheriff.",
   "no-text" : "(no text)",
   "not-following-comments" : "Not following comments",
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "not-publish-my-complain" : "Please, do not publish my complain",
+  "not-show-complains" : "Do not show complains",
   "not-specified" : "Not specified",
   "not-subscribed" : "Not subscribed",
   "not-valid-e-mail" : "Not a valid e-mail address",
@@ -713,6 +716,7 @@
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
+  "sheriff-decided-not-publish-complains" : "The sheriff decided not to publish the complains.",
   "sheriff-order" : "Sheriff's Order",
   "sheriff-order-reason" : {
     "copyright" : "Copyright infringement",
@@ -797,6 +801,7 @@
   "upload-too-large" : "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Used by add-on:",
+  "user-asks-not-publish-complain" : "User asks not to publish the complain",
   "user-comments-hidden" : "This user's comments are hidden",
   "verify-signature" : "Verify signature",
   "view-as-chart" : "View as chart",
