--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -387,11 +387,14 @@
   "no-requests-available" : "Нет доступных просьб.",
   "not-allowed" : "Недопустимо",
   "not-connected-home" : "Не подключён к дому",
+  "note-complains-public" : "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слежу за комментариями",
   "nothing-yet" : "Тут пока пусто.",
   "notify-about-update" : "Уведомить подписчиков об обновлении",
   "notify-followers" : "Уведомить подписчиков",
+  "not-publish-my-complain" : "Пожалуйста, не публикуйте мою жалобу",
+  "not-show-complains" : "Не показывать жалобы",
   "not-specified" : "Не указана",
   "not-subscribed" : "Не {gender, select, female {подписан} other {подписана}}",
   "not-valid-e-mail" : "Недопустимый адрес e-mail",
@@ -713,6 +716,7 @@
   "share" : "Поделиться",
   "share-ellipsis" : "Поделиться...",
   "share-page" : "Поделиться страницей",
+  "sheriff-decided-not-publish-complains" : "Шериф принял решение не публиковать жалобы.",
   "sheriff-order" : "Приказ шерифа",
   "sheriff-order-reason" : {
     "copyright" : "Нарушение авторских прав",
@@ -797,6 +801,7 @@
   "upload-too-large" : "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Используется дополнением:",
+  "user-asks-not-publish-complain" : "Пользователь просит не публиковать эту жалобу",
   "user-comments-hidden" : "Комментарии этого пользователя скрываются",
   "verify-signature" : "Проверить подпись",
   "view-as-chart" : "В виде диаграммы",
