--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -387,11 +387,14 @@
   "no-requests-available" : "Немає доступних прохань.",
   "not-allowed" : "Неприпустимо",
   "not-connected-home" : "Не підключений до дому",
+  "note-complains-public" : "<b>Примітка:</b> Усі скарги шерифу є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слідкую за коментарями",
   "nothing-yet" : "Тут поки що порожньо.",
   "notify-about-update" : "Повідомити підписникам про оновлення",
   "notify-followers" : "Повідомити підписникам",
+  "not-publish-my-complain" : "Будь ласка, не публікуйте мою скаргу",
+  "not-show-complains" : "Не показувати скарги",
   "not-specified" : "Не вказана",
   "not-subscribed" : "Не {gender, select, female {підписаний} other {підписана}}",
   "not-valid-e-mail" : "Неприпустима адреса e-mail",
@@ -713,6 +716,7 @@
   "share" : "Поділитися",
   "share-ellipsis" : "Поділитися...",
   "share-page" : "Поділитися сторінкою",
+  "sheriff-decided-not-publish-complains" : "Шериф прийняв рішення не публікувати скарги.",
   "sheriff-order" : "Наказ шерифа",
   "sheriff-order-reason" : {
     "copyright" : "Порушення авторських прав",
@@ -797,6 +801,7 @@
   "upload-too-large" : "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Використовується додатком:",
+  "user-asks-not-publish-complain" : "Користувач просить не публікувати цю скаргу",
   "user-comments-hidden" : "Коментарі цього користувача приховуються",
   "verify-signature" : "Перевірити підпис",
   "view-as-chart" : "У вигляді діаграми",
