--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -310,6 +310,7 @@
       "remote-comment-added" : "{comments} commented on {posting} {heading} {reason}",
       "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
       "sheriff-complain-added" : "You have received a new complain",
+      "sheriff-complain-decided" : "Sheriff has responded to your complain on {target}",
       "sheriff-marked" : "Sheriff has hidden {target} on Android",
       "sheriff-unmarked" : "Sheriff has revealed {target} on Android",
       "subscriber-added" : "{node} subscribed to your {feed}",
