--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -310,6 +310,7 @@
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {ответила} other {ответил}}} other {ответили}} на ваш комментарий {heading} к {posting}",
       "sheriff-complain-added" : "Вы получили новую жалобу",
+      "sheriff-complain-decided" : "Шериф ответил на вашу жалобу на {target}",
       "sheriff-marked" : "Шериф запретил показывать {target} на Android",
       "sheriff-unmarked" : "Шериф разрешил показывать {target} на Android",
       "subscriber-added" : "{node} {gender, select, female {подписалась} other {подписался}} на вашу ленту {feed}",
