--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -31,7 +31,7 @@
   "avatar-shape" : "Avatar shape",
   "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
-  "back-to-list-complains" : "← List of complains",
+  "back-to-list-complains" : "← List of complaints",
   "banned-android-google-play" : "Banned on Android (Google Play)",
   "bio" : "Bio",
   "block" : "Block",
@@ -77,7 +77,7 @@
     "comment" : "Comment by {commentName} \"{commentHeading}\" in the post by {postingName} \"{postingHeading}\"",
     "post" : "Post by {name} \"{heading}\""
   },
-  "complains" : "Complains",
+  "complains" : "Complaints",
   "complain-status" : {
     "approved" : "Approved",
     "invalid-target" : "Incorrect data",
@@ -89,7 +89,7 @@
     "prepare-failed" : "Could not be processed",
     "rejected" : "Rejected"
   },
-  "complain-status-colon" : "Complain status:",
+  "complain-status-colon" : "Complaint status:",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Connect",
@@ -309,8 +309,8 @@
       "reaction-added" : "{reactions} your post {heading}",
       "remote-comment-added" : "{comments} commented on {posting} {heading} {reason}",
       "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
-      "sheriff-complain-added" : "You have received a new complain",
-      "sheriff-complain-decided" : "Sheriff has responded to your complain on {target}",
+      "sheriff-complain-added" : "You have received a new complaint",
+      "sheriff-complain-decided" : "Sheriff has responded to your complaint on {target}",
       "sheriff-marked" : "Sheriff has hidden {target} on Android",
       "sheriff-unmarked" : "Sheriff has revealed {target} on Android",
       "subscriber-added" : "{node} subscribed to your {feed}",
@@ -388,14 +388,14 @@
   "no-requests-available" : "No requests available.",
   "not-allowed" : "Not allowed",
   "not-connected-home" : "Not connected to home",
-  "note-complains-public" : "<b>Note:</b> All complains to the sheriff are public. You can ask not to publish your complain for some reason, but the final decision is made by the sheriff.",
+  "note-complains-public" : "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text" : "(no text)",
   "not-following-comments" : "Not following comments",
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
-  "not-publish-my-complain" : "Please, do not publish my complain",
-  "not-show-complains" : "Do not show complains",
+  "not-publish-my-complain" : "Please, do not publish my complaint",
+  "not-show-complains" : "Do not show complaints",
   "not-specified" : "Not specified",
   "not-subscribed" : "Not subscribed",
   "not-valid-e-mail" : "Not a valid e-mail address",
@@ -717,7 +717,7 @@
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
-  "sheriff-decided-not-publish-complains" : "The sheriff decided not to publish the complains.",
+  "sheriff-decided-not-publish-complains" : "The sheriff decided not to publish the complaints.",
   "sheriff-order" : "Sheriff's Order",
   "sheriff-order-reason" : {
     "copyright" : "Copyright infringement",
@@ -802,18 +802,18 @@
   "upload-too-large" : "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Used by add-on:",
-  "user-asks-not-publish-complain" : "User asks not to publish the complain",
+  "user-asks-not-publish-complain" : "User asks not to publish the complaint",
   "user-comments-hidden" : "This user's comments are hidden",
   "verify-signature" : "Verify signature",
   "view-as-chart" : "View as chart",
   "view-as-list" : "View as list",
   "view-comments" : "View comments",
-  "view-complains" : "View complains",
+  "view-complains" : "View complaints",
   "view-earlier-comments" : "View earlier comments",
   "view-images-grid" : "View images as grid",
   "view-images-list" : "View images as list",
   "view-later-comments" : "View later comments",
-  "view-previous-complains" : "View previous complains",
+  "view-previous-complains" : "View previous complaints",
   "view-source" : "View source",
   "view-source-title" : "View Source",
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
