<b> can be included into the message itself.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -222,7 +222,7 @@
   "height" : "Height",
   "help" : "Help",
   "hide" : "Hide",
-  "hide-blog-google-play" : "Do not show the blog <0>{name}</0> on Android (Google Play).",
+  "hide-blog-google-play" : "Do not show the blog <b>{name}</b> on Android (Google Play).",
   "hide-comment-google-play" : "Do not show the comment \"{heading}\" on Android (Google Play).",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
@@ -327,7 +327,7 @@
   },
   "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
   "italic" : "Italic",
-  "i-think-blog-hide" : "I think, the blog <0>{name}</0> should be hidden.",
+  "i-think-blog-hide" : "I think, the blog <b>{name}</b> should be hidden.",
   "i-think-comment-hide" : "I think, the comment \"{heading}\" should be hidden.",
   "i-think-post-hide" : "I think, the post \"{heading}\" should be hidden.",
   "kick" : "Kick",
@@ -827,7 +827,7 @@
   "width" : "Width",
   "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
-  "write-down-words" : "Please write down or print these words and keep them in a safe place. You will need them for any operations with the name ‘{name}’. <0>If you loose these words, they cannot be recovered and you will completely loose control of your registered name.</0>",
+  "write-down-words" : "Please write down or print these words and keep them in a safe place. You will need them for any operations with the name ‘{name}’. <b>If you loose these words, they cannot be recovered and you will completely loose control of your registered name.</b>",
   "written-down-words" : "I have written down all these words",
   "wrong-reset-token" : "Wrong secret code",
   "yes" : "Yes",
