--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -222,7 +222,7 @@
   "height" : "Высота",
   "help" : "Помощь",
   "hide" : "Скрыть",
-  "hide-blog-google-play" : "Не показывать блог <0>{name}</0> в Android (Google Play).",
+  "hide-blog-google-play" : "Не показывать блог <b>{name}</b> в Android (Google Play).",
   "hide-comment-google-play" : "Не показывать комментарий \"{heading}\" в Android (Google Play).",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
@@ -327,7 +327,7 @@
   },
   "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Зайти в свой блог</2>",
   "italic" : "Курсив",
-  "i-think-blog-hide" : "Я считаю, что блог <0>{name}</0> следует скрыть.",
+  "i-think-blog-hide" : "Я считаю, что блог <b>{name}</b> следует скрыть.",
   "i-think-comment-hide" : "Я считаю, что комментарий \"{heading}\" следует скрыть.",
   "i-think-post-hide" : "Я считаю, что пост \"{heading}\" следует скрыть.",
   "kick" : "Выгнать",
@@ -827,7 +827,7 @@
   "width" : "Ширина",
   "write-anything" : "Пишите что угодно...",
   "write-comment-here" : "Напишите тут комментарий для {mention}...",
-  "write-down-words" : "Пожалуйста, запишите или распечатайте эти слова и храните их в безопасном месте. Они вам понадобятся для любых операций с именем ‘{name}’. <0>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</0>",
+  "write-down-words" : "Пожалуйста, запишите или распечатайте эти слова и храните их в безопасном месте. Они вам понадобятся для любых операций с именем ‘{name}’. <b>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</b>",
   "written-down-words" : "Я записал эти слова",
   "wrong-reset-token" : "Неправильный секретный код",
   "yes" : "Да",
