--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -222,7 +222,7 @@
   "height" : "Висота",
   "help" : "Допомога",
   "hide" : "Приховати",
-  "hide-blog-google-play" : "Не показувати блог <0>{name}</0> у Android (Google Play).",
+  "hide-blog-google-play" : "Не показувати блог <b>{name}</b> у Android (Google Play).",
   "hide-comment-google-play" : "Не показувати коментар \"{heading}\" у Android (Google Play).",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
@@ -327,7 +327,7 @@
   },
   "invitation-buttons" : "<0>Створити новий блог</0><1>або</1><2>Увійти у свій блог</2>",
   "italic" : "Курсив",
-  "i-think-blog-hide" : "Я вважаю, що блог <0>{name}</0> слід приховати.",
+  "i-think-blog-hide" : "Я вважаю, що блог <b>{name}</b> слід приховати.",
   "i-think-comment-hide" : "Я вважаю, що коментар \"{heading}\" слід приховати.",
   "i-think-post-hide" : "Я вважаю, що пост \"{heading}\" слід приховати.",
   "kick" : "Вигнати",
@@ -827,7 +827,7 @@
   "width" : "Ширина",
   "write-anything" : "Пишіть що завгодно...",
   "write-comment-here" : "Напишіть тут коментар для {mention}...",
-  "write-down-words" : "Будь ласка, запишіть або роздрукуйте ці слова та зберігайте їх у безпечному місці. Вони вам знадобляться для будь-яких операцій з ім'ям '{name}'. <0>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</0>",
+  "write-down-words" : "Будь ласка, запишіть або роздрукуйте ці слова та зберігайте їх у безпечному місці. Вони вам знадобляться для будь-яких операцій з ім'ям '{name}'. <b>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</b>",
   "written-down-words" : "Я записав ці слова",
   "wrong-reset-token" : "Невірний секретний код",
   "yes" : "Так",
