Sheriff's ability to hide all content of a user in all governed blogs.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -33,6 +33,7 @@
   "back-to-feed" : "← {feed}",
   "back-to-list-complains" : "← List of complaints",
   "banned-android-google-play" : "Banned on Android (Google Play)",
+  "banned-content-android-google-play" : "All content banned on Android (Google Play)",
   "bio" : "Bio",
   "block" : "Block",
   "blocked" : "Blocked",
@@ -96,7 +97,9 @@
   "connected" : "Connected",
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
+  "content-hidden-in-google-play" : "All content is hidden in Android (Google Play)",
   "content-not-accessible-android" : "This content is not accessible on Android.",
+  "content-unhidden-in-google-play" : "All content is unhidden in Android (Google Play)",
   "continue-reading" : "Continue Reading →",
   "copy" : "Copy",
   "copy-image-from-internet" : "Copy Image From Internet",
@@ -226,6 +229,8 @@
   "hide" : "Hide",
   "hide-blog-google-play" : "Do not show the blog <b>{name}</b> on Android (Google Play).",
   "hide-comment-google-play" : "Do not show the comment \"{heading}\" on Android (Google Play).",
+  "hide-content-in-google-play" : "Hide all content in Android (Google Play)...",
+  "hide-content-user-in-google-play" : "Do you really want to hide all content of user <b>{name}</b> in all blogs in Android (Google Play)?",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
   "hide-hidden-comments" : "Hide hidden comments",
@@ -783,6 +788,8 @@
   "unhide" : "Unhide",
   "unhide-blog-google-play" : "Do you really want to unhide the blog <b>{name}</b> in Android (Google Play)?",
   "unhide-comment-google-play" : "Do you really want to unhide the comment \"{heading}\" in Android (Google Play)?",
+  "unhide-content-in-google-play" : "Unhide all content in Android (Google Play)...",
+  "unhide-content-user-in-google-play" : "Do you really want to unhide all content of user <b>{name}</b> in all blogs in Android (Google Play)?",
   "unhide-in-google-play" : "Unhide in Android (Google Play)...",
   "unhide-post-google-play" : "Do you really want to unhide the post \"{heading}\" in Android (Google Play)?",
   "unkick" : "Take back",
