--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -33,6 +33,7 @@
   "back-to-feed" : "← {feed}",
   "back-to-list-complains" : "← Список жалоб",
   "banned-android-google-play" : "Запрещено к показу на Android (Google Play)",
+  "banned-content-android-google-play" : "Весь контент запрещен на Android (Google Play)",
   "bio" : "О себе",
   "block" : "Заблокировать",
   "blocked" : "Заблокирован",
@@ -96,7 +97,9 @@
   "connected" : "Подключён",
   "connect-home" : "Подключиться к дому",
   "connecting" : "Подключение",
+  "content-hidden-in-google-play" : "Весь контент скрыт в Android (Google Play)",
   "content-not-accessible-android" : "Этот контент недоступен на Android.",
+  "content-unhidden-in-google-play" : "Весь контент раскрыт в Android (Google Play)",
   "continue-reading" : "Читать дальше →",
   "copy" : "Копировать",
   "copy-image-from-internet" : "Копировать картинку из Интернета",
@@ -226,6 +229,8 @@
   "hide" : "Скрыть",
   "hide-blog-google-play" : "Не показывать блог <b>{name}</b> в Android (Google Play).",
   "hide-comment-google-play" : "Не показывать комментарий \"{heading}\" в Android (Google Play).",
+  "hide-content-in-google-play" : "Скрыть весь контент в Android (Google Play)...",
+  "hide-content-user-in-google-play" : "Вы действительно хотите скрыть весь контент пользователя <b>{name}</b> во всех блогах в Android (Google Play)?",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
   "hide-hidden-comments" : "Спрятать скрытые комментарии",
@@ -783,6 +788,8 @@
   "unhide" : "Раскрыть",
   "unhide-blog-google-play" : "Вы действительно хотите раскрыть блог <b>{name}</b> в Android (Google Play)?",
   "unhide-comment-google-play" : "Вы действительно хотите раскрыть комментарий \"{heading}\" в Android (Google Play)?",
+  "unhide-content-in-google-play" : "Раскрыть весь контент в Android (Google Play)...",
+  "unhide-content-user-in-google-play" : "Вы действительно хотите раскрыть весь контент пользователя <b>{name}</b> во всех блогах в Android (Google Play)?",
   "unhide-in-google-play" : "Раскрыть в Android (Google Play)...",
   "unhide-post-google-play" : "Вы действительно хотите раскрыть пост \"{heading}\" в Android (Google Play)?",
   "unkick" : "Вернуть",
