--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -33,6 +33,7 @@
   "back-to-feed" : "← {feed}",
   "back-to-list-complains" : "← Список скарг",
   "banned-android-google-play" : "Заборонено до показу на Андроїд (Google Play)",
+  "banned-content-android-google-play" : "Весь контент заборонений на Android (Google Play)",
   "bio" : "Про себе",
   "block" : "Заблокувати",
   "blocked" : "Заблокований",
@@ -96,7 +97,9 @@
   "connected" : "Підключений",
   "connect-home" : "Підключитись до дому",
   "connecting" : "Підключення",
+  "content-hidden-in-google-play" : "Весь контент приховано у Android (Google Play)",
   "content-not-accessible-android" : "Цей контент недоступний на Android.",
+  "content-unhidden-in-google-play" : "Весь контент розкрито у Android (Google Play)",
   "continue-reading" : "Читати далі →",
   "copy" : "Копіювати",
   "copy-image-from-internet" : "Копіювати картинку з Інтернету",
@@ -226,6 +229,8 @@
   "hide" : "Приховати",
   "hide-blog-google-play" : "Не показувати блог <b>{name}</b> у Android (Google Play).",
   "hide-comment-google-play" : "Не показувати коментар \"{heading}\" у Android (Google Play).",
+  "hide-content-in-google-play" : "Сховати весь контент у Android (Google Play)...",
+  "hide-content-user-in-google-play" : "Ви дійсно бажаєте сховати весь контент користувача <b>{name}</b> в усіх блогах у Android (Google Play)?",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
   "hide-hidden-comments" : "Сховати приховані коментарі",
@@ -783,6 +788,8 @@
   "unhide" : "Розкрити",
   "unhide-blog-google-play" : "Ви дійсно бажаєте розкрити блог <b>{name}</b> у Android (Google Play)?",
   "unhide-comment-google-play" : "Ви дійсно бажаєте розкрити коментар \"{heading}\" у Android (Google Play)?",
+  "unhide-content-in-google-play" : "Розкрити весь контент у Android (Google Play)...",
+  "unhide-content-user-in-google-play" : "Ви дійсно бажаєте розкрити весь контент користувача <b>{name}</b> в усіх блогах у Android (Google Play)?",
   "unhide-in-google-play" : "Розкрити у Android (Google Play)...",
   "unhide-post-google-play" : "Ви дійсно бажаєте розкрити пост \"{heading}\" у Android (Google Play)?",
   "unkick" : "Повернути",
