User-friendly settings for sheriffs.timeline option.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -710,6 +710,7 @@
       "addons" : "Дополнения",
       "appearance" : "Вид",
       "comment" : "Комментарий",
+      "moderation" : "Модерация",
       "news" : "Новости",
       "notifications" : "Уведомления",
       "other" : "Прочее",
@@ -825,6 +826,7 @@
   "view-previous-complains" : "Показать предыдущие жалобы",
   "view-source" : "Показать исходный текст",
   "view-source-title" : "Показать исходный текст",
+  "want-allow-android-google-play" : "Я хочу, чтобы мой блог был виден в приложении Moera для Android, установленном из Google Play. Я разрешаю шерифу приложения Moera для Android читать содержимое блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в этом приложении",
   "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
   "want-delete-draft" : "Вы действительно хотите удалить черновик?",
   "want-delete-token" : "Вы действительно хотите удалить токен \"{name}\"?",
