--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -710,6 +710,7 @@
       "addons" : "Додатки",
       "appearance" : "Вигляд",
       "comment" : "Коментар",
+      "moderation" : "Модерація",
       "news" : "Новини",
       "notifications" : "Повідомлення",
       "other" : "Інше",
@@ -825,6 +826,7 @@
   "view-previous-complains" : "Показати попередні скарги",
   "view-source" : "Показати початковий текст",
   "view-source-title" : "Показати початковий текст",
+  "want-allow-android-google-play" : "Я бажаю, щоб мій блог було видно у додатку Moera для Android, що встановлений із Google Play. Я дозволяю шерифу додатку Moera для Android читати вміст блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у цьому додатку",
   "want-delete-addon" : "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
   "want-delete-draft" : "Ви дійсно бажаєте видалити чернетку?",
   "want-delete-token" : "Ви дійсно бажаєте видалити токен \"{name}\"?",
