--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -710,6 +710,7 @@
       "addons" : "Add-ons",
       "appearance" : "Appearance",
       "comment" : "Comment",
+      "moderation" : "Moderation",
       "news" : "News",
       "notifications" : "Notifications",
       "other" : "Other",
@@ -825,6 +826,7 @@
   "view-previous-complains" : "View previous complaints",
   "view-source" : "View source",
   "view-source-title" : "View Source",
+  "want-allow-android-google-play" : "I want my blog to be accessible with Moera for Android app installed from Google Play. I allow the sheriff of Moera for Android app to read the content of by blog and decide (according to the rules), which posts or comments are to be hidden from the app",
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
   "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
